[gd_scene load_steps=6 format=2]

[ext_resource path="res://environment/wall.tscn" type="PackedScene" id=1]
[ext_resource path="res://environment/obstacle.gd" type="Script" id=2]
[ext_resource path="res://assets/audio/point.wav" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 33, 435.5 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 579 )

[node name="obstacle" type="Node2D" groups=["obstacles"]]
position = Vector2( 0, 427 )
script = ExtResource( 2 )

[node name="wall" parent="." instance=ExtResource( 1 )]
position = Vector2( 0, 75 )

[node name="wall2" parent="." instance=ExtResource( 1 )]
position = Vector2( 0, -75 )
rotation = 3.14159

[node name="change_pos_ai" type="Area2D" parent="."]
position = Vector2( -131, -13 )
collision_layer = 2
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="change_pos_ai"]
position = Vector2( 16, 16.5 )
shape = SubResource( 2 )

[node name="score_area" type="Area2D" parent="."]
collision_layer = 3
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="score_area"]
shape = SubResource( 1 )

[node name="point" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( -17, -1 )

[connection signal="body_entered" from="wall" to="." method="_on_wall_body_entered"]
[connection signal="body_entered" from="wall2" to="." method="_on_wall_body_entered"]
[connection signal="body_entered" from="change_pos_ai" to="." method="_on_change_pos_ai_body_entered"]
[connection signal="body_exited" from="score_area" to="." method="_on_score_area_body_exited"]
